fix(o-tab): update mediaquery size for switching from tab to accordions also on small view like tablet

--- a/scss/_o-nav.scss
+++ b/scss/_o-nav.scss
@@ -124,7 +124,7 @@
     }
   }
 
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(sm) {
     .o-tab-heading {
       flex-grow: 1;
       margin-left: 0;
